fixed white space in board details

--- a/react-app/src/components/Lists/Lists.css
+++ b/react-app/src/components/Lists/Lists.css
@@ -127,7 +127,8 @@ height: 100vh;
 .list__head{
    margin-left: 18px;
    margin-bottom: 15px;
-   padding-top: -15px;
+   margin-top: 0px;
+   padding-top: 15px;
 }
 
 .lists__group {
